--- a/MitybosPrograma/Assembly-CSharp.csproj
+++ b/MitybosPrograma/Assembly-CSharp.csproj
@@ -58,7 +58,28 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ClientMethods.cs" />
     <Compile Include="Assets\Scripts\IClientInterface.cs" />
+    <Compile Include="Assets\Scripts\DatabaseMethods.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Scripts\DLLs\Google.Protobuf.dll" />
+    <None Include="Assets\Scripts\DLLs\K4os.Compression.LZ4.Streams.dll" />
+    <None Include="Assets\Scripts\DLLs\K4os.Hash.xxHash.xml" />
+    <None Include="Assets\Scripts\DLLs\System.Runtime.CompilerServices.Unsafe.dll" />
+    <None Include="Assets\Scripts\DLLs\System.IO.Pipelines.dll" />
+    <None Include="Assets\Scripts\DLLs\BouncyCastle.Cryptography.xml" />
+    <None Include="Assets\Scripts\DLLs\K4os.Hash.xxHash.dll" />
+    <None Include="Assets\Scripts\DLLs\ZstdSharp.dll" />
+    <None Include="Assets\Scripts\DLLs\System.IO.Pipelines.xml" />
+    <None Include="Assets\Scripts\DLLs\BouncyCastle.Cryptography.dll" />
+    <None Include="Assets\Scripts\DLLs\MySql.Data.dll" />
+    <None Include="Assets\Scripts\DLLs\MySql.Data.xml" />
+    <None Include="Assets\Scripts\DLLs\K4os.Compression.LZ4.xml" />
+    <None Include="Assets\Scripts\DLLs\K4os.Compression.LZ4.Streams.xml" />
+    <None Include="Assets\Scripts\DLLs\K4os.Compression.LZ4.dll" />
+    <None Include="Assets\Scripts\DLLs\System.Runtime.CompilerServices.Unsafe.xml" />
+    <None Include="Assets\Scripts\DLLs\Google.Protobuf.xml" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -391,6 +412,50 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Google.Protobuf">
+      <HintPath>Assets\Scripts\DLLs\Google.Protobuf.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="MySql.Data">
+      <HintPath>Assets\Scripts\DLLs\MySql.Data.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="ZstdSharp">
+      <HintPath>Assets\Scripts\DLLs\ZstdSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe">
+      <HintPath>Assets\Scripts\DLLs\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="K4os.Compression.LZ4.Streams">
+      <HintPath>Assets\Scripts\DLLs\K4os.Compression.LZ4.Streams.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="BouncyCastle.Cryptography">
+      <HintPath>Assets\Scripts\DLLs\BouncyCastle.Cryptography.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="K4os.Compression.LZ4">
+      <HintPath>Assets\Scripts\DLLs\K4os.Compression.LZ4.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.IO.Pipelines">
+      <HintPath>Assets\Scripts\DLLs\System.IO.Pipelines.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="K4os.Hash.xxHash">
+      <HintPath>Assets\Scripts\DLLs\K4os.Hash.xxHash.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Types">
+      <HintPath>C:\Program Files\Unity 2021.3.35f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Gradle">
+      <HintPath>C:\Program Files\Unity 2021.3.35f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Gradle.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="netstandard">
