Added navigation between different main segments

--- a/MitybosPrograma/Assembly-CSharp.csproj
+++ b/MitybosPrograma/Assembly-CSharp.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Assets\UI\TableLayout\TableLayout.cs" />
     <Compile Include="Assets\Scripts\unity_auth\UILogin.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerCache.cs" />
+    <Compile Include="Assets\Scripts\Main\MainManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
