Fixed survey script and tweaked a bunch of other stuff
- Account creation now works (allergies too)
- User_data placeholder no longer exists instead user_data is created upon finishing survey
- Removed unnecessary parameters from database methods
- Temporarily commented out IClientInteface extension from ClientMethods

--- a/MitybosPrograma/Assembly-CSharp.csproj
+++ b/MitybosPrograma/Assembly-CSharp.csproj
@@ -58,60 +58,63 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\unity_auth\LoginController.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_ContentLayout.cs" />
-    <Compile Include="Assets\Scripts\Main\SegmentInformation.cs" />
-    <Compile Include="Assets\Scripts\Survey\ButtonTransitions.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Header.cs" />
     <Compile Include="Assets\Scripts\Survey\SegmentManager.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\DatabaseMethods.cs" />
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\AutoPlan.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Enums.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Animator.cs" />
-    <Compile Include="Assets\UI\DatePicker\DatePicker.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerExtensions.cs" />
-    <Compile Include="Assets\Scripts\Main\ButtonObject.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_DayButton_Pool.cs" />
     <Compile Include="Assets\Scripts\Tutorial\TutorialManager.cs" />
     <Compile Include="Assets\Scripts\Survey\SliderScript.cs" />
-    <Compile Include="Assets\UI\DatePicker\DatePicker_DateRange.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\IClientInterface.cs" />
-    <Compile Include="Assets\UI\DatePicker\DatePickerUtilities.cs" />
     <Compile Include="Assets\UI\TableLayout\TableRow.cs" />
     <Compile Include="Assets\UI\TableLayout\TableCell.cs" />
-    <Compile Include="Assets\Input\PlayerInput.cs" />
-    <Compile Include="Assets\Scripts\Main\MainManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerTimerComponent.cs" />
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\PriorityQueue.cs" />
-    <Compile Include="Assets\UI\DatePicker\DatePicker_HoldButton.cs" />
-    <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\BranchAndBound.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerTimer.cs" />
-    <Compile Include="Assets\UI\DatePicker\DatePicker_DayButton.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\ClientMethods.cs" />
     <Compile Include="Assets\UI\TableLayout\Example\TableLayoutExampleController.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Instantiation.cs" />
     <Compile Include="Assets\Scripts\Search\FoodSearch.cs" />
     <Compile Include="Assets\UI\DatePicker\SerializableDate.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_InputField.cs" />
-    <Compile Include="Assets\UI\DatePicker\DatePicker_Button.cs" />
     <Compile Include="Assets\UI\TableLayout\Example\DynamicRowsExampleController.cs" />
+    <Compile Include="Assets\UI\DatePicker\TextMesh Pro\DatePicker_TextMeshProUtilities.cs" />
+    <Compile Include="Assets\Scripts\Game\MovePlayer.cs" />
+    <Compile Include="Assets\Scripts\Main\CameraScroll.cs" />
+    <Compile Include="Assets\Scripts\Login\LoginManager.cs" />
+    <Compile Include="Assets\UI\TableLayout\TableLayout.cs" />
+    <Compile Include="Assets\Scripts\unity_auth\UILogin.cs" />
+    <Compile Include="Assets\Scripts\unity_auth\LoginController.cs" />
+    <Compile Include="Assets\Scripts\Main\SegmentInformation.cs" />
+    <Compile Include="Assets\Scripts\Survey\ButtonTransitions.cs" />
+    <Compile Include="Assets\UI\DatePicker\DatePicker.cs" />
+    <Compile Include="Assets\Scripts\Main\ButtonObject.cs" />
+    <Compile Include="Assets\UI\DatePicker\DatePicker_DateRange.cs" />
+    <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
+    <Compile Include="Assets\UI\DatePicker\DatePickerUtilities.cs" />
+    <Compile Include="Assets\Input\PlayerInput.cs" />
+    <Compile Include="Assets\Scripts\Main\MainManager.cs" />
+    <Compile Include="Assets\UI\DatePicker\DatePicker_HoldButton.cs" />
+    <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\BranchAndBound.cs" />
+    <Compile Include="Assets\UI\DatePicker\DatePicker_DayButton.cs" />
+    <Compile Include="Assets\Scripts\Game\MovementJoystick.cs" />
+    <Compile Include="Assets\UI\DatePicker\DatePicker_Button.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_DayHeader.cs" />
     <Compile Include="Assets\UI\DatePicker\TextMesh Pro\DatePicker_TextMeshProDefaults.cs" />
     <Compile Include="Assets\Scripts\Main\GameCard.cs" />
     <Compile Include="Assets\UI\TableLayout\TableLayoutUtilities.cs" />
     <Compile Include="Assets\Scripts\Survey\SurveyManager.cs" />
-    <Compile Include="Assets\UI\DatePicker\TextMesh Pro\DatePicker_TextMeshProUtilities.cs" />
-    <Compile Include="Assets\Scripts\Main\CameraScroll.cs" />
     <Compile Include="Assets\UI\DatePicker\Example\ExampleController.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Config.cs" />
-    <Compile Include="Assets\Scripts\Login\LoginManager.cs" />
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\FoodClass.cs" />
-    <Compile Include="Assets\UI\TableLayout\TableLayout.cs" />
-    <Compile Include="Assets\Scripts\unity_auth\UILogin.cs" />
     <Compile Include="Assets\Scripts\Models\UserData.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\DBManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerCache.cs" />
-    <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
+    <Compile Include="Assets\Scripts\Models\Allergy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scripts\UI-DBmethods\plugins\sqlite3.dll" />
@@ -1036,6 +1039,10 @@
       <HintPath>Library\ScriptAssemblies\Unity.2D.PixelPerfect.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Shaders">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="PsdPlugin">
       <HintPath>Library\ScriptAssemblies\PsdPlugin.dll</HintPath>
       <Private>False</Private>
@@ -1046,6 +1053,10 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.State.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Searcher.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.Services.Authentication.PlayerAccounts">
@@ -1076,6 +1087,10 @@
       <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
@@ -1088,8 +1103,24 @@
       <HintPath>Library\ScriptAssemblies\Unity.2D.IK.Runtime.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.ShaderGraph.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.ShaderGraph.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Cinemachine">
+      <HintPath>Library\ScriptAssemblies\Cinemachine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="com.unity.cinemachine.editor">
+      <HintPath>Library\ScriptAssemblies\com.unity.cinemachine.editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.2D.Aseprite.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.2D.Aseprite.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
@@ -1114,6 +1145,14 @@
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.2D.Tilemap.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Runtime">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="PPv2URPConverters">
+      <HintPath>Library\ScriptAssemblies\PPv2URPConverters.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
@@ -1148,6 +1187,10 @@
       <HintPath>Library\ScriptAssemblies\Unity.InternalAPIEditorBridge.001.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Runtime">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
       <Private>False</Private>
@@ -1178,6 +1221,10 @@
     </Reference>
     <Reference Include="Unity.Burst">
       <HintPath>Library\ScriptAssemblies\Unity.Burst.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.Services.Authentication.Editor.Shared">
@@ -1212,6 +1259,10 @@
       <HintPath>Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.2D.Aseprite.Common">
       <HintPath>Library\ScriptAssemblies\Unity.2D.Aseprite.Common.dll</HintPath>
       <Private>False</Private>
@@ -1222,6 +1273,10 @@
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.2D.SpriteShape.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Runtime">
