--- a/MitybosPrograma/Assembly-CSharp.csproj
+++ b/MitybosPrograma/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\UI-DBmethods\IClientInterface.cs" />
     <Compile Include="Assets\UI\TableLayout\TableRow.cs" />
     <Compile Include="Assets\UI\TableLayout\TableCell.cs" />
+    <Compile Include="Assets\Scripts\Game\Coin.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerTimerComponent.cs" />
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\PriorityQueue.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerTimer.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Assets\UI\DatePicker\SerializableDate.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\Chair.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_InputField.cs" />
+    <Compile Include="Assets\Scripts\Game\Shield.cs" />
     <Compile Include="Assets\UI\TableLayout\Example\DynamicRowsExampleController.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\Chef.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\ChairSlide.cs" />
@@ -130,7 +132,6 @@
     <Compile Include="Assets\Scripts\Models\UserData.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\DBManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerCache.cs" />
-    <Compile Include="Assets\Scripts\Game\Coin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
