Added new weapon
- added "Hot Sauce Trailblazer" weapon
- improved projectile system
- fixed enemy spawner

--- a/MitybosPrograma/Assembly-CSharp.csproj
+++ b/MitybosPrograma/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\AutoPlan.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Enums.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\JumpCameraFollow.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\Hot Sauce Trailblazer\ME_HotSauceTrailblazer.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Animator.cs" />
     <Compile Include="Assets\Scripts\Game\Magic\Player\ME_Player.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerExtensions.cs" />
@@ -106,7 +107,8 @@
     <Compile Include="Assets\Scripts\Main\CameraScroll.cs" />
     <Compile Include="Assets\Scripts\Calculations\BmiCalories.cs" />
     <Compile Include="Assets\Scripts\Models\ScoresChickenWings.cs" />
-    <Compile Include="Assets\Scripts\Game\Magic\Enemies\Healthbar.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\Projectile Type\ME_Projectile_Bullet.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Healthbar\Healthbar.cs" />
     <Compile Include="Assets\Prefabs\Scroller\ScrollerPrefab.cs" />
     <Compile Include="Assets\Scripts\Login\LoginManager.cs" />
     <Compile Include="Assets\UI\TableLayout\TableLayout.cs" />
@@ -126,6 +128,7 @@
     <Compile Include="Assets\Scripts\Game\PauseManager.cs" />
     <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerUtilities.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\Projectile Type\ME_Projectile_Puddle.cs" />
     <Compile Include="Assets\Input\PlayerInput.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\JumpGameManager.cs" />
     <Compile Include="Assets\Scripts\Main\MainManager.cs" />
@@ -153,7 +156,7 @@
     <Compile Include="Assets\Scripts\Game\Jump\Booster.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Config.cs" />
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\FoodClass.cs" />
-    <Compile Include="Assets\Scripts\Game\Magic\Weapons\ME_ProjectileStatic.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\Projectile Type\ME_Projectile_Sword.cs" />
     <Compile Include="Assets\Prefabs\Scoreboard\Scoreboard.cs" />
     <Compile Include="Assets\Scripts\Models\UserData.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\DBManager.cs" />
